# shengmo

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: pipeline-flow.mmd
shengmo/: __init__.py  asr_engine.py  audio_processor.py  cli.py  config.py  formatter.py  pipeline.py  text_processor.py
test_voice/: 测试音频.m4a  测试音频_纠正.m4a  测试音频_语气词.m4a
