[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shengmo"
version = "0.1.0"
description = "声沫 - 智能语音识别工具，支持说话人分离、声纹过滤、语气词删除、口误纠正、发音纠正、热词配置"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tencentcloud-sdk-python>=3.0.900",
    "tencentcloud-sdk-python-asr>=3.0.900",
    "pydub>=0.25.1",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pypinyin>=0.49.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.3.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
voiceprint = [
    "resemblyzer>=0.1.3",
    "librosa>=0.10.0",
]
all = [
    "shengmo[diarization,voiceprint]",
]

[project.scripts]
shengmo = "shengmo.cli:main"

[tool.setuptools.packages.find]
include = ["shengmo*"]
